# op-vm

./: .gitignore  .npmignore  .prettierrc.json  Cargo.toml  LICENSE.md  README.md  SECURITY.md  build.rs  build.rs_old  index.d.ts  index.js  install.mjs  package-lock.json  package.json  test.js
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md  changelog-config.json  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: CI.yml
AUDIT/: README.md
benches/: wasmer_runner.rs
napi/: index.d.ts  index.js
npm/android-arm-eabi/: README.md  package.json
npm/android-arm64/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-universal/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/freebsd-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm-musleabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-riscv64-gnu/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
resources/: release.wasm  release.wat
src/: contract.rs  lib.rs  main.rs
src/api/: api.rs  mod.rs
src/application/: mod.rs
src/application/contract/: contract_service.rs  mod.rs
src/domain/: mod.rs
src/domain/assembly_script/: assembly_script.rs  mod.rs
src/domain/common/: address.rs  mod.rs
src/domain/contract/: contract.rs  custom_env.rs  mod.rs
src/domain/runner/: abort_data.rs  bitcoin_network.rs  call_result.rs  calldata.rs  contract_runner.rs  custom_env.rs  environment_variables.rs  exit_data.rs  exit_result.rs  exit_signal.rs  hard_fork.rs  import_functions.rs  instance_wrapper.rs  mod.rs  network.rs  revert_data.rs  runner_instance.rs  runner_response.rs  store.rs  threaded_wasmer_runner.rs  wasmer_instance.rs  wasmer_runner.rs
src/domain/runner/constants/: consensus_flags.rs  constants.rs  mldsa_public_key.rs  mod.rs
src/domain/runner/exported_import_functions/: bitcoin_address_validator.rs  mod.rs
src/domain/runner/import_functions/: abort_import.rs  account_type_import.rs  address_type_import.rs  block_hash_import.rs  call_other_contract_import.rs  console_log_import.rs  deploy_from_address_import.rs  emit_import.rs  exit_import.rs  get_call_result_import.rs  get_calldata_import.rs  get_environment_variables_import.rs  get_inputs_import.rs  get_inputs_size_import.rs  get_outputs_import.rs  get_outputs_size_import.rs  inputs_import.rs  mldsa_load_import.rs  mod.rs  outputs_import.rs  revert_import.rs  ripemd160_import.rs  sha256_import.rs  storage_load_import.rs  storage_store_import.rs  transient_load_import.rs  transient_store_import.rs  update_from_address_import.rs  validate_bitcoin_address_import.rs  verify_schnorr_import.rs  verify_signatures_import.rs
src/domain/runner/signatures/: mldsa.rs  mod.rs
src/domain/tcp/: mod.rs  tcp_socket.rs  tcp_socket_pool.rs
src/domain/vm/: gas_costs.rs  huge_page_benchmark.rs  huge_page_linear_memory.rs  huge_page_memory.rs  limiting_tunables.rs  logger.rs  lower_string.rs  mod.rs  op_costs.rs
src/domain/vm/atomic/: RaceTrap.disabled  atomic_shim.rs  mod.rs  no_atomic_wait.rs
src/domain/vm/dummy/: env_dummy.rs  generic_external_function_dummy.rs  mod.rs
src/domain/vm/middlewares/: clamp_bulk_mem.rs  metering.rs  mod.rs  reject_fp.rs
src/domain/vm/thread/: mod.rs  threading.rs
src/domain/vm/ticket/: mod.rs  ticket_futex.rs
src/domain/vm/utils/: bytes_to_hex.rs  mod.rs
src/domain/vm/vdf/: fixed_cha_cha.rs  mod.rs  snark.rs  vdf.rs  vdf_zk_snark.rs
src/interfaces/: mod.rs
src/interfaces/napi/: abort_data_response.rs  bitcoin_network_request.rs  call_other_contract_external_function.rs  call_response.rs  console_log_external_function.rs  contract.rs  contract_call_task.rs  contract_manager.rs  contract_parameter.rs  deploy_from_address_external_function.rs  encode_address_function.rs  environment_variables_request.rs  exit_data_response.rs  generic_external_function.rs  js_contract.rs  js_contract_manager.rs  mod.rs  network_request.rs  revert_data_response.rs  runtime_pool.rs  skip_field.rs  storage_load_external_function.rs  storage_store_external_function.rs  thread_safe_js_import_response.rs
src/interfaces/napi/contract/: js_contract_parameter.rs  mod.rs
src/interfaces/napi/external_functions/: account_type_external_function.rs  address_type_external_function.rs  block_hash_external_function.rs  call_other_contract_external_function.rs  console_log_external_function.rs  deploy_from_address_external_function.rs  emit_external_function.rs  encode_address_external_function.rs  external_function.rs  flush_events_external_function.rs  generic_external_function.rs  inputs_external_function.rs  mldsa_load_external_function.rs  mod.rs  next_pointer_value_greater_than_external_function.rs  outputs_external_function.rs  storage_load_external_function.rs  storage_store_external_function.rs
src/interfaces/neon/: bitcoin_network_request.rs  contract.rs  contract_manager.rs  environment_variables_request.rs  hard_fork_request.rs  mod.rs  runtime_pool.rs
src/interfaces/neon/external_functions/: call_other_contract_external_function.rs  external_function.rs  storage_store_external_function.rs  update_from_address_external_function.rs
src/vm/: op_costs.rs
test/: index.js
tests/: huge_pages_integration.rs  mod.rs  test.rs
tests/common/: mock_instance_wrapper.rs  mod.rs
tests/integration/: data_slice_writer_test.rs  mod.rs
(+3 files in other folders)
