[package]
name = "op-vm"
version = "1.0.0-beta.0"
edition = "2021"
build = "build.rs"
rust-version = "1.92.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
neon = { version = "1.2.0-alpha.0" }
wasmer = { version = "7.0.0", default-features = true, features = ["default", "compiler", "singlepass", "wasmer-compiler-singlepass", "wasm-c-api", "core"] }
wasmer-compiler-singlepass = "7.0.0"
wasmer-types = { version = "7.0.0", features = ["default"] }
wasmer-compiler = { version = "7.0.0" }
anyhow = "1.0.100"
tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "macros", "time", "sync"] }
chrono = "0.4.43"
sha2 = "0.11.0-rc.3"
ripemd = "0.2.0-rc.3"
hex = "0.4.3"
bytes = "1.11.0"
bitcoin = "0.33.0-beta.0"
log = "0.4.29"
secp256k1 = { version = "0.32.0-beta.2", features = ["std"] }
once_cell = "1.21.3"
thiserror = "2.0.17"
fips204 = { version = "0.4.6", features = ["default"] }
env_logger = { version = "0.11.8", optional = true }

[dev-dependencies]
wat = "1.244.0"

[features]
default = ["reference-types", "ml-dsa-44"]
ml-dsa-44 = []
ml-dsa-65 = []
ml-dsa-87 = []
transient-storage = []
debug-metering = ["env_logger"]
table-metering = []
reference-types = ["table-metering"]

[profile.release]
strip = "symbols"
panic = "abort"
