[package]
name = "op-vm"
version = "1.0.0-rc.1"
edition = "2021"
build = "build.rs"
rust-version = "1.93.1"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
neon = { version = "1.2.0-alpha.0" }
wasmer = { version = "7.0.1", default-features = true, features = ["default", "compiler", "singlepass", "wasmer-compiler-singlepass", "wasm-c-api", "core"] }
wasmer-compiler-singlepass = "7.0.1"
wasmer-types = { version = "7.0.1", features = ["default"] }
wasmer-compiler = { version = "7.0.1" }
anyhow = "1.0.102"
tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "macros", "time", "sync"] }
chrono = "0.4.43"
sha2 = "0.11.0-rc.5"
ripemd = "0.2.0-rc.5"
hex = "0.4.3"
bytes = "1.11.1"
bitcoin = "0.33.0-beta.0"
log = "0.4.29"
secp256k1 = { version = "0.32.0-beta.2", features = ["std"] }
once_cell = "1.21.3"
thiserror = "2.0.18"
fips204 = { version = "0.4.6", features = ["default"] }
env_logger = { version = "0.11.9", optional = true }
k256 = { version = "0.14.0-rc.7", default-features = false, features = ["ecdsa"] }
bech32 = "0.11.1"

[dev-dependencies]
wat = "1.245.1"
k256 = { version = "0.14.0-rc.7", default-features = false, features = ["arithmetic"] }

[features]
default = ["reference-types", "ml-dsa-44"]
ml-dsa-44 = []
ml-dsa-65 = []
ml-dsa-87 = []
transient-storage = []
debug-metering = ["env_logger"]
table-metering = []
reference-types = ["table-metering"]

[profile.release]
strip = "symbols"
panic = "abort"
